@@ -61,7 +61,7 @@ BUILDING AND INSTALLATION
 
   You'll probably need to do the last as root unless you're installing
   into a local Perl module tree in your home directory.
-[% ELSIF build.type == 'Autoconf' %]
+[% ELSIF build.type == 'Autoconf' %][% IF build.install %]
 BUILDING AND INSTALLATION
 
   You can build and install [% name %] with the standard commands:
@@ -69,12 +69,20 @@ BUILDING AND INSTALLATION
       ./configure
       make
       make install
+[% ELSE %]
+BUILDING
 
+  You can build [% name %] with the standard commands:
+
+      ./configure
+      make
+[% END %]
   If you are building from a Git clone, first run ./bootstrap in the
-  source directory to generate the build files.  make install will
-  probably have to be done as root.  Building outside of the source
-  directory is also supported, if you wish, by creating an empty directory
-  and then running configure with the correct relative path.
+  source directory to generate the build files.[% IF build.install %]
+  make install will probably have to be done as root.[% END %]  Building
+  outside of the source directory is also supported, if you wish, by
+  creating an empty directory and then running configure with the correct
+  relative path.
 [% IF build.middle %]
 [% indent(to_text(build.middle), 2) %]
 [% END %][% IF build.kerberos %]
@@ -132,7 +140,7 @@ BUILDING AND INSTALLATION
   If none of the above made any sense to you, don't bother with this flag.
 [% END %][% IF build.suffix %]
 [% indent(to_text(build.suffix), 2) %]
-[% END %]
+[% END %][% IF !readme.testing %]
 TESTING
 
   [% name %] comes with a test suite, which you can run after building
@@ -146,7 +154,7 @@ TESTING
 
   Do this instead of running the test program directly since it will
   ensure that necessary environment variables are set up.
-[% IF test.suffix %]
+[% END %][% IF test.suffix %]
 [% indent(to_text(test.suffix), 2) %]
 [% END %][% END %]
 [% FOREACH section IN readme.sections %][% section.title FILTER upper %]
