@@ -1,0 +1,2 @@
+Installing C TAP Harness is not normally done.  Instead, see the section
+on using the harness below.
